--- a/1.html
+++ b/1.html
@@ -65,6 +65,13 @@
 				</body>
 			</html>
 		</script>
+<script charset="utf-8" src="//js.hsforms.net/forms/current.js"></script>
+<script>
+  hbspt.forms.create({ 
+    portalId: '231191',
+    formId: 'ca9befb0-5288-4581-a029-22d65a5acc4e'
+  });
+</script>
 
 
 		<script type='text/coderdeck' id='coderdeck-style-example'>
@@ -86,8 +93,9 @@
 
 <!-- Create any number of elements with class slide within the container -->
 <article class='slide slide-subhead'>
-<h1>RampUp, by Startup Institute</h1>
+<h1>RampUp Week 1</h1>
 <h2>HTML5 &amp; the Semantic Web</h2>
+<p>Use your left/right arrows to navigate</p>
 </article>
 	
 
@@ -103,28 +111,9 @@
 	<p>HTML is a markup language, which means you're annotating (marking up) plain text to give it structure and meaning, similar to the way you would underline or make notes in a book.</p>
 </article>
 
-<article class='slide slide-accent'>
-	
-	<h1 class="text-top">HTML5</h1>
-	<img src="images/html5-shield-1.png"/>
-	<p>Last numbered version of HTML<br/>
-	there will be no 6, 7, or 8</p>
-
-</article>
-
 
 <article class='slide slide-accent'>
 	<h1>HTML 101</h1>
-</article>
-
-<article class='slide slide-subhead'>
-	<h1>first a little intro</h1>
-</article>	
-
-<article class='slide slide-subhead'>
-	<h1>Let's Watch a Video</h1>
-	<h3><a href="http://www.dontfeartheinternet.com/html/html">Don't Fear the Internet</a></h3>
-	<p>from the wonderful Jessica Hische &amp; Russ Maschmeyer</p>
 </article>
 
 <article class='slide slide-accent'>
@@ -148,14 +137,6 @@
 
 <article class='slide slide-list'>
 	<h1>Tags</h1>
-	<p> In HTML you can write just the opening tag and it will often work like: <br/>
-			<div class="slide example"><em>&lt;h1&gt;</em> Headline<br/> <em>&lt;p&gt;</em> Body text.</div> 
-	</p>
-	<p class="slide callout">Don’t do this. Always use open and close or single tags.</p>
-</article>		
-
-<article class='slide slide-list'>
-	<h1>Tags</h1>
 	<p class='slide'>Tell the browser about your content</p>
 	<ul>
 		<li class='slide'>	
@@ -174,158 +155,11 @@
 	<p class='slide'>Some tags are generic - <em>&lt;div&gt;</em>, <em>&lt;span&gt;</em> Some have “semantic” meaning <em>&lt;h1&gt;</em>, <em>&lt;nav&gt;</em><p>
 </article>	
 
-
-<article class='slide slide-list'>
-	<h1>Semantic?</h1>
-	<h3 class='slide'>"Tag" Information</h3>
-	<ul>
-		<li class='slide'><h3> i.e. the "markup" in HT<span class="callout">M</span>L
-			</h3>
-		</li>
-		<li class='slide'><h3> Now that you have tagged some information, every browser in the world knows some information about the content.
-			</h3>
-		</li>
-		<li class='slide'><h3> Ever notice phone numbers on websites are sometimes clickable on your phone and sometimes not? This is because of HTML</h3>
-		</li>
-		
-	</ul>		
+<article class='slide slide-subhead'>
+<h1>Join RampUp</h1>
+<h2><a href="rampup.startupinstitute.com/register/" data-mce-href="rampup.startupinstitute.com/register/">Register</a></h2>
+<p>Use your left/right arrows to navigate</p>
 </article>
-
-
-
-
-
-<article class='slide slide-list'>
-<h2>Playing with tags</h2>
-<p>try adding some text using an <em>&lt;h1&gt;</em>, <em>&lt;h2&gt;</em> & <em>&lt;p&gt;</em> tag <p></p>
-<textarea class='coder-editor coder-editor-split coder-editor-instant'  data-save='tag-playground'>
-</textarea>
-<script type='coder-solution'>
-<h1>This is a header</h1>
-<h2>This is a subhead</h2>
-<p>This is some paragraph text. HTML is so much fun!! You could keep doing writing tags all day long. But now we have to talk about attributes</p>
-</script>
-</article>
-	
-
-<article class='slide slide-list'>
-	<h1>HTML5 Semantic Tags</h1>
-	<h3>Most Common Tags</h3>
-	<ul> 
-		<li class='slide'>
-			<h3><em>&lt;head&gt;</em> = Meta Info</h3>
-		</li>
-		<li class='slide'>
-			<h3><em>&lt;body&gt;</em> = Site Content</h3>
-		</li>
-		<li class='slide'>
-			<h3><em>&lt;header&gt;</em> = Header (Head area of the site)</h3>
-		</li>
-		<li class='slide'><h3><em>&lt;nav&gt;</em> = Navigation (Menu/Navigation Area)
-	 
-			</h3>
-
-	
-	</ul>		
-</article>
-
-
-<article class='slide slide-list'>
-	<h1>HTML5 Semantic Tags</h1>
-	<h3>More Common Tags</h3>
-	<ul> 
-	
-		</li>
-		<li class='slide'><h3><em>&lt;section&gt;</em>  = Section
-			</h3>
-		</li>
-		<li class='slide'><h3><em>&lt;article&gt;</em> = Article
-			</h3>
-		<li class='slide'><h3><em>&lt;footer&gt;</em>  = Footer Area
-			</h3>
-		</li>
-		<li class='slide'><h3><em>&lt;aside&gt;</em> = An area on a side (side bar)
-			</h3>
-		</li>
-	
-	</ul>		
-</article>
-
-
-
-
-<article class='slide slide-accent'>
-<h1>how you might use these tags</h1>
-</article>
-
-<article style='background-image:url(images/semantic-globe.jpg);' class='slide slide-background'>
-</article>
-
-<article style='background-image:url(images/semantic-globe-overlay.jpg);' class='slide slide-background'>
-</article>
-
-<article style='background-image:url(images/semantic-css.jpg);' class='slide slide-background'>
-</article>
-
-<article style='background-image:url(images/semantic-css-overlay.jpg);' class='slide slide-background'>
-</article>
-
-<article class='slide slide-list'>
-<h2>Here's a Basic Site Template</h2>
-<textarea class='coder-editor coder-editor-split coder-editor-instant'>
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>My Title</title>
-    <link rel="stylesheet" type='text/css' href="sample.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Awesome Website</h1>
-      <nav id='top-menu'>
-      <ul class='menu'>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">About</a></li>
-        <li><a href="#">Blog</a></li>
-        <li><a href="#">Contact</a></li>
-      </ul>
-      </nav>
-    </header>
-    <section id='content'>
-      <article class='blog-post'>
-        <hgroup>
-          <h1>Lorem Ipsum Blog Post</h1>
-          <h2>By writer person</h2>
-        </hgroup>
-        <p>
-          Duis pellentesque velit sed est tincidunt nec lacinia nisi suscipit. Vivamus ut dolor vitae nisi gravida molestie. Morbi lorem augue, blandit id fringilla eget, vestibulum id nisl. Sed viverra eros ut sem rhoncus quis laoreet nisl condimentum. Duis aliquam viverra porttitor. Duis ligula ligula, venenatis sed sagittis in, mollis nec nulla. Curabitur imperdiet libero vitae sem sagittis sit amet posuere neque ultricies. Aenean lobortis, nunc sit amet tincidunt egestas, ipsum nulla dapibus nisl, at dapibus nisi sem non augue. Pellentesque convallis risus sit amet arcu porta et blandit mauris ultrices. Donec facilisis mollis elementum. Nam eget faucibus d</p>
-        <h2>Lorem McIpsum</h2>
-          <p>Nulla in ullamcorper erat. Curabitur auctor sagittis sollicitudin. Phasellus urna erat, vestibulum congue rutrum non, bibendum eu mauris. Aenean varius vulputate ante, quis lacinia felis sollicitudin quis. Nulla vitae dui sem. Ut rhoncus euismod dignissim. Pellentesque metus nisl, convallis id condimentum sed, ullamcorper sit amet odio. Suspendisse ut augue massa, nec mattis risus. Vestibulum mattis, leo et posuere porttitor, mi tortor porta quam, imperdiet fermentum mi turpis ac erat. Aliquam ut nisl et velit aliquam imperdiet at sit amet velit. Sed non hendrerit quam. Fusce dignissim, tellus sed blandit auctor, mi sem ultricies leo, eget iaculis sem ligula vitae mauris.</p>
-        <footer class='post-footer'>
-        Posted On 1/1/2011
-        </footer>
-      </article>
-      <aside id='sidebar'>
-        <h1>Older Posts</h1>
-        <ul>
-        	<li><a href="#">Link1</a></li>
-        	<li><a href="#">Link2</a></li>
-        </ul>
-      </aside>
-    </section>
-    <footer id='site-footer'>
-      <nav id='footer-nav'>
-        <ul>
-        	<li><a href="#">Contact Us</a></li>
-        	<li><a href="#">Privacy Policy</a></li>
-        </ul>
-      </nav>
-
-    </footer>
-  </body>
-</html>
-</textarea>
-</article> 
 
 <!-- Update these paths to point to the correct files. -->
 <script src="src/jquery.tmpl.min.js"></script>
