--- a/1.html
+++ b/1.html
@@ -149,7 +149,7 @@
 
 <article class='slide slide-subhead'>
 <h1>Join RampUp</h1>
-<h2> <a href="https://rampup.startupinstitute.com/register/">Register</a></h2>
+<h2> <a href="rampup.startupinstitute.com/register/">Register</a></h2>
 </article>
 
 <!-- Update these paths to point to the correct files. -->
